deploy/kube-manifests/1_meshcreate.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: snens
  labels:
    mesh: sneappmesh
    gateway: ingress-gw-new
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
