deploy/kube-manifests/5_sne-app-virtualgw.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-gw-new
  namespace: snens
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-gw-new
  template:
    metadata:
      labels:
        app: ingress-gw-new
    spec:
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.17.2.0
          ports:
            - containerPort: 8088
