deploy/kube-manifests/4_javatest-app-deployment-all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  namespace: app-dev
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: hello-world
      version: v1
  template:
    metadata:
      labels:
        app: hello-world
        version: v1
    spec:
      #serviceAccountName: sne-confidant-k8-poc-policy
      containers:
      - name: hello-world
        image: CONTAINER_IMAGE
        resources:
          requests:
            memory: "1200Mi"
            cpu: "350m"
          limits:
            memory: "1600Mi"
            cpu: "500m"
        ports: 
        - containerPort: 8080   
                      
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: app-dev
spec:
  #type: NodePort
  selector:
    app: hello-world
    version: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
