deploy/kube-manifests/2_appmesh_components.yml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: sne-app-svc
  namespace: snens
spec:
  awsName: sne-app-svc.snens.svc.cluster.local
  provider:
    virtualRouter:
        virtualRouterRef:
            name: sne-app-svc-router
